# Simc

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  vcpkg.json
docs/: control_theory.drawio
src/: CMakeLists.txt  main.cc  mainwindow.cc  mainwindow.hh  mainwindow.ui  parameter.hh  signal.hh  variable.hh
src/controller/: CMakeLists.txt  base.hh  pid.hh
src/integrator/: base.hh
src/observer/: CMakeLists.txt  base.hh
src/sensor/: base.hh
src/system/: CMakeLists.txt  base.hh  invertedpendulum.hh
src/utilities/: CMakeLists.txt  noncopyable.hh
